--- a/src/lib/dune
+++ b/src/lib/dune
@@ -7,7 +7,7 @@
 (library
   (name AltErgoLib)
   (public_name alt-ergo-lib)
-  (ocamlopt_flags (:standard -open Prelude))
+  (flags (:standard -open Prelude))
   ; external dependencies
   (libraries
     seq
@@ -41,7 +41,7 @@
     Fun_sat Inequalities Bitv_rel Th_util Adt Adt_rel
     Instances IntervalCalculus Intervals Ite_rel Ite Matching Matching_types
     Polynome Records Records_rel Satml_frontend_hybrid Satml_frontend Satml
-    Sat_solver Sat_solver_sig Sig Sig_rel Theory Uf Use
+    Sat_solver Sat_solver_sig Sig Sig_rel Theory Uf Uf2 Use
     ; structures
     Commands Errors Explanation Fpa_rounding
     Parsed Profiling Satml_types Symbols
@@ -50,7 +50,7 @@
     Emap Gc_debug Hconsing Hstring Iheap Lists Loc
     MyUnix Numbers
     Options Timers Util Vec Version Steps Printer My_zip
-    Theories Compat
+    Theories Compat Store
   )
 
  (js_of_ocaml
