--- a/src/lib/dune
+++ b/src/lib/dune
@@ -26,7 +26,7 @@
     fmt
     landmarks
   )
-  (preprocess (pps ppx_blob landmarks-ppx --auto))
+  (preprocess (pps ppx_blob landmarks-ppx))
   (preprocessor_deps (glob_files ../preludes/*.ae))
 
   ; .mli only modules *also* need to be in this field
