--- a/.github/workflows/build_static.yml
+++ b/.github/workflows/build_static.yml
@@ -98,6 +98,7 @@ jobs:
 
   lol:
     name: Release
+    runs-on: ubuntu-latest
     needs: [ musl ]
     steps:
       - name: Download musl statically linked binary
