--- a/.github/workflows/build_static.yml
+++ b/.github/workflows/build_static.yml
@@ -99,7 +99,7 @@ jobs:
   lol:
     name: Release
     runs-on: ubuntu-latest
-    needs: [ musl ]
+    needs: [ build-musl ]
     steps:
       - name: Download musl statically linked binary
         uses: actions/download-artifact@v4
