--- a/.github/workflows/build_static.yml
+++ b/.github/workflows/build_static.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   pull_request:
   push:
+    tags:
+      - "v*.*.*"
     branches:
       - next
       - main
@@ -91,20 +93,28 @@ jobs:
 
       - run: opam exec -- dune install -p alt-ergo --create-install-files --prefix opt/alt-ergo --relocatable
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload musl artifact
+        uses: actions/upload-artifact@v4
         with:
           name: alt-ergo-x86_64-linux-musl
           path: _destdir/opt/alt-ergo/bin/alt-ergo
 
-  lol:
-    name: Release
-    runs-on: ubuntu-latest
-    needs: [ build-musl ]
-    steps:
-      - name: Download musl statically linked binary
-        uses: actions/download-artifact@v4
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          name: alt-ergo-x86_64-linux-musl
-
-      - name: Display structure of downloaded files
-        run: ls -R
+          files: |
+            _destdir/opt/alt-ergo/bin/alt-ergo
+#  lol:
+#    name: Release
+#    runs-on: ubuntu-latest
+#    needs: [ build-musl ]
+#    steps:
+#      - name: Download musl statically linked binary
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: alt-ergo-x86_64-linux-musl
+#
+#      - name: Display structure of downloaded files
+#        run: ls -R
+#
