--- a/.github/workflows/build_static.yml
+++ b/.github/workflows/build_static.yml
@@ -63,6 +63,9 @@ jobs:
       image: ocamlpro/ocaml:4.14-flambda
       options: --user root
 
+    permissions:
+      contents: write
+
     steps:
 
       - name: Checkout code
