chore(BV, CP): Refactor propagation mechanism
This patch simplifies the propagation mechanism (currently used in the
bit-vector relations only) in order to accomodate different types of
propagators more easily.

In particular, there is now a single generic (and configurable) loop
that runs the propagators instead of a spaghetti of different loops for
each kind of propagators.

--- a/src/lib/dune
+++ b/src/lib/dune
@@ -60,7 +60,7 @@
     ; util
     Emap Gc_debug Hconsing Hstring Heap Loc Numbers Uqueue
     Options Timers Util Vec Version Steps Printer
-    My_zip My_unix My_list Theories Nest Compat
+    My_zip My_unix My_list Theories Nest Compat Type
   )
 
  (js_of_ocaml
