chore(BV, CP): Refactor propagation mechanism
This patch simplifies the propagation mechanism (currently used in the
bit-vector relations only) in order to accomodate different types of
propagators more easily.

In particular, there is now a single generic (and configurable) loop
that runs the propagators instead of a spaghetti of different loops for
each kind of propagators.

--- a/src/lib/dune
+++ b/src/lib/dune
@@ -60,7 +60,7 @@
     Expr Var Ty Typed Xliteral ModelMap Id Uid Objective Literal
     ; util
     Emap Gc_debug Hconsing Hstring Heap Lists Loc
-    MyUnix Numbers Uqueue
+    MyUnix Numbers Uqueue Type
     Options Timers Util Vec Version Steps Printer My_zip
     Theories Nest
   )
